--- a/tutorial0/checkpoint0.ipynb
+++ b/tutorial0/checkpoint0.ipynb
@@ -20,6 +20,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d3c23846",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a97e6875",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -39,8 +53,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get a list containing the last 3 elements of a\n",
-    "# Yes, you can just type out [4, 5, 6] but we really want to see you demonstrate you know how to use list slicing in Python"
+    "a = [1, 2, 3, 4, 5, 6]\n",
+    "last_three = a[-3:]\n",
+    "print(last_three)"
    ]
   },
   {
@@ -50,7 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a list of numbers from 1 to 20"
+    "numbers = list(range(1, 21))\n",
+    "print(numbers)"
    ]
   },
   {
@@ -60,8 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# now get a list with only the even numbers between 1 and 100\n",
-    "# you may or may not make use of the list you made in the last cell"
+    "evens = [i for i in range(1, 101) if i%2 == 0]\n",
+    "print(evens)"
    ]
   },
   {
@@ -71,8 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write a function that takes two numbers as arguments\n",
-    "# and returns the first number divided by the second"
+    "def divide(a, b):\n",
+    "    return a / b"
    ]
   },
   {
@@ -82,8 +98,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write a function that takes a string as input\n",
-    "# and return that string in all caps"
+    "def to_uppercase(s):\n",
+    "    return s.upper()"
    ]
   },
   {
@@ -93,13 +109,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fizzbuzz\n",
-    "# you will need to use both iteration and control flow \n",
-    "# go through all numbers from 1 to 30 in order\n",
-    "# if the number is a multiple of 3, print fizz\n",
-    "# if the number is a multiple of 5, print buzz\n",
-    "# if the number is a multiple of 3 and 5, print fizzbuzz and NOTHING ELSE\n",
-    "# if the number is neither a multiple of 3 nor a multiple of 5, print the number"
+    "for i in range(1, 31):\n",
+    "    if i % 3 == 0 and i % 5 == 0:\n",
+    "        print('fizzbuzz')\n",
+    "    elif i % 3 == 0:\n",
+    "        print('fizz')\n",
+    "    elif i % 5 == 0:\n",
+    "        print('buzz')\n",
+    "    else:\n",
+    "        print(i)"
    ]
   },
   {
@@ -109,11 +127,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a dictionary that reflects the following menu pricing (taken from Ahmo's)\n",
-    "# Gyro: $9 \n",
-    "# Burger: $9\n",
-    "# Greek Salad: $8\n",
-    "# Philly Steak: $10"
+    "menu_pricing = {\n",
+    "    \"Gyro\": 9,\n",
+    "    \"Burger\": 9,\n",
+    "    \"Greek Salad\": 8,\n",
+    "    \"Philly Steak\": 10\n",
+    "}"
    ]
   },
   {
@@ -127,7 +146,11 @@
    "outputs": [],
    "source": [
     "# load in the \"starbucks.csv\" dataset\n",
-    "# refer to how we read the cereal.csv dataset in the tutorial\n"
+    "# refer to how we read the cereal.csv dataset in the tutorial\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load in the \"starbucks.csv\" dataset\n",
+    "df = pd.read_csv(\"starbucks.csv\")"
    ]
   },
   {
@@ -137,7 +160,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# output the calories, sugars, and protein columns only of every 40th row. "
+    "# output the calories, sugars, and protein columns only of every 40th row. \n",
+    "subset = df.iloc[::40][['Calories', 'Sugars', 'Protein']]\n",
+    "print(subset)"
    ]
   },
   {
@@ -147,7 +172,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# select all rows with more than and including 400 calories"
+    "# select all rows with more than and including 400 calories\n",
+    "high_cal = df[df[\"Calories\"] >= 400]\n",
+    "print(high_cal)"
    ]
   },
   {
@@ -157,7 +184,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# select all rows whose vitamin c content is higher than the iron content"
+    "# select all rows whose vitamin c content is higher than the iron content\n",
+    "high_vit_c = df[df[\"Vitamin C (% DV)\"] > df[\"Iron (% DV)\"]]\n",
+    "print(high_vit_c)"
    ]
   },
   {
@@ -167,7 +196,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a new column containing the caffeine per calories of each drink"
+    "# create a new column containing the caffeine per calories of each drink\n",
+    "df[\"Caffeine per Calories\"] = df[\"Caffeine (mg)\"] / df[\"Calories\"]\n",
+    "print(df)"
    ]
   },
   {
@@ -180,7 +211,9 @@
    },
    "outputs": [],
    "source": [
-    "# what is the average calorie across all items?\n"
+    "# what is the average calorie across all items?\n",
+    "avg_cal = df[\"Calories\"].mean()\n",
+    "print(avg_cal)\n"
    ]
   },
   {
@@ -193,7 +226,9 @@
    },
    "outputs": [],
    "source": [
-    "# how many different categories of beverages are there?\n"
+    "# how many different categories of beverages are there?\n",
+    "num_bev_cat = df[\"Beverage_category\"].nunique()\n",
+    "print(num_bev_cat)"
    ]
   },
   {
@@ -206,7 +241,9 @@
    },
    "outputs": [],
    "source": [
-    "# what is the average # calories for each beverage category?\n"
+    "# what is the average # calories for each beverage category?\n",
+    "avg_cal_bev_cat = df.groupby(\"Beverage_category\")[\"Calories\"].mean()\n",
+    "print(avg_cal_bev_cat)"
    ]
   }
  ],
