--- a/tutorial1/checkpoint1.ipynb
+++ b/tutorial1/checkpoint1.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "Reminder: \n",
     "\n",
-    "- You are being evaluated for completion and effort in this checkpoint. \n",
+    "- You are being evaluated for compeletion and effort in this checkpoint. \n",
     "- Avoid manual labor / hard coding as much as possible, everything we've taught you so far are meant to simplify and automate your process."
    ]
   },
@@ -56,10 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,7 +77,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv('../data/states_edu.csv')\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Chosen one of Grade 4 Reading, Grade 4 Math, or Grade 8 Math to focus on: *ENTER YOUR CHOICE HERE*"
+    "Chosen one of Grade 4 Reading, Grade 4 Math, or Grade 8 Math to focus on: *Grade 8 Math*"
    ]
   },
   {
@@ -122,7 +129,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "24"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,7 +145,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.dropna(subset=['AVG_READING_8_SCORE'], inplace=True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,7 +161,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mfrs = df.groupby(\"mfr\")\n",
+    "mfrs[\"AVG_READING_8_SCORE\"].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -166,7 +180,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mfrs[\"AVG_READING_8_SCORE\"].max()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -211,7 +227,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.scatter(data=df, x= 'EXPENDITURE_PER_STUDENT', Y-'AVG_MATH_8_SCORE')\n",
+    "plt.title[\"Expenditure per Student vs Avg Math 8 Score\"]\n",
+    "plt.xlabel[\"Expenditure per Student\"]\n",
+    "plt.ylabel[\"Average Math 8 Score\"]\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -232,7 +255,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#plot for total rrevenue vs. avg math score\n",
+    "plt.scatter[\"TOTAL_REVENUE\", \"AVG_MATH_8_SCORE\"]\n",
+    "plt.title[\"Toal Revenue vs Avg Math 8 Score\"]\n",
+    "plt.xlabel[\"Total Revenue\"]\n",
+    "plt.ylabel[\"Average Math 8 Score\"]\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,9 +296,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X =\n",
-    "# y = "
+    "X = df[(\"EXPENDITURE_PER_STUDENT\", \"TOTAL_REVENUE\")]\n",
+    "y = df[\"AVG_MATH_8_SCORE\"]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -275,8 +311,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X_train, X_test, y_train, y_test = train_test_split(\n",
-    "#      X, y, test_size=, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=, random_state=42)\n",
+    "X_train_dropped = X_train.dropped()\n",
+    "Y_Train_Dropped = y_train.dropped()"
    ]
   },
   {
@@ -299,7 +336,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import your sklearn class here"
+    "# import your sklearn class here\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -309,7 +349,7 @@
    "outputs": [],
    "source": [
     "# create your model here\n",
-    "# model = "
+    "model = LinearRegression()"
    ]
   },
   {
@@ -349,7 +389,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.metrics import mean_squared_error, r2\n",
+    "meansq = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print(f'Mean Squared Error (MSE): [mse]')\n",
+    "print(f'R-squared (R:): [r2]')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -366,16 +412,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# col_name = 'COLUMN NAME OF ONE PREDICTOR'\n",
+    "col_name = 'COLUMN NAME OF ONE PREDICTOR'\n",
     "\n",
-    "# f = plt.figure(figsize=(12,6))\n",
-    "# plt.scatter(X_train[col_name], y_train, color = \"red\")\n",
-    "# plt.scatter(X_train[col_name], model.predict(X_train), color = \"green\")\n",
+    "f = plt.figure(figsize=(12,6))\n",
+    "plt.scatter(X_train[col_name], y_train, color = \"red\")\n",
+    "plt.scatter(X_train[col_name], model.predict(X_train), color = \"green\")\n",
     "\n",
-    "# plt.legend(['True Training','Predicted Training'])\n",
-    "# plt.xlabel(col_name)\n",
-    "# plt.ylabel('NAME OF THE PREDICTOR')\n",
-    "# plt.title(\"Model Behavior On Training Set\")"
+    "plt.legend(['True Training','Predicted Training'])\n",
+    "plt.xlabel(col_name)\n",
+    "plt.ylabel('NAME OF THE PREDICTOR')\n",
+    "plt.title(\"Model Behavior On Training Set\")"
    ]
   },
   {
@@ -384,16 +430,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# col_name = 'COLUMN NAME OF ONE PREDICTOR\"\n",
+    "col_name = 'COLUMN NAME OF ONE PREDICTOR\"\n",
     "\n",
-    "# f = plt.figure(figsize=(12,6))\n",
-    "# plt.scatter(X_test[col_name], y_test, color = \"blue\")\n",
-    "# plt.scatter(X_test[col_name], model.predict(X_test), color = \"black\")\n",
+    "f = plt.figure(figsize=(12,6))\n",
+    "plt.scatter(X_test[col_name], y_test, color = \"blue\")\n",
+    "plt.scatter(X_test[col_name], model.predict(X_test), color = \"black\")\n",
     "\n",
-    "# plt.legend(['True testing','Predicted testing'])\n",
-    "# plt.xlabel(col_name)\n",
-    "# plt.ylabel('NAME OF THE PREDICTOR')\n",
-    "# plt.title(\"Model Behavior on Testing Set\")"
+    "plt.legend(['True testing','Predicted testing'])\n",
+    "plt.xlabel(col_name)\n",
+    "plt.ylabel('NAME OF THE PREDICTOR')\n",
+    "plt.title(\"Model Behavior on Testing Set\")"
    ]
   },
   {
