--- a/tutorial1/checkpoint1.ipynb
+++ b/tutorial1/checkpoint1.ipynb
@@ -202,7 +202,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['Total_Enrollment'] = df['Enroll_All'].fillna(df['Enroll_All_Est'])\n",
+    "df['EXPENDITUR_PER_STUDENT'] = df['TOTAL-EXPENDITURE'] / DF['TOTAL_ENROLLMENT']\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -454,6 +458,20 @@
    "metadata": {},
    "source": [
     "**<WRITE A PARAGRAPH SUMMARIZING YOUR WORK, FINDINGS, AND THE PERFORMANCE OF YOUR MODEL\\>**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First and foremost, I familiarized myself with matplotlib and further developed my python skills. As far as the \n",
+    "# data plots, the first vizualization (graph) of Expenditure per Student over Math 8 Score showed what perceived to be\n",
+    "# a scattered, but linear nonetheless, growth of scores as the expenditure per student increased. In the second data \n",
+    "# vizualization of Total Revenue and Average Math 8 score, I discovered that in the cluster of actual data points (blue \n",
+    "# dots), many black dots (the predictions) were also present. Further, the plots of prediction and the plots of actual\n",
+    "# data would have appeared similar.\n"
    ]
   }
  ],
